<resources>
    <string name="app_name">Classmate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_fab_description">Описание FAB для отправки email</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_home">Главная</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_lectures">Лекции</string>
    <string name="menu_schedule">Расписание</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_groups">Группы</string>
    <string name="menu_attendance">Посещаемость</string>
    <string name="menu_classes">Онлайн занятия</string>
    <string name="menu_diary">Дневник</string>
    <string name="add_new_student">Новый студент</string>
    <string name="send">Ввод сообщения</string>
    <string name="user_image">Пользовательский образ</string>
    <string name="new_friend_request">Запрос на добавление в друзья</string>
    <string name="accept">Принимать</string>
    <string name="decline">Отказать</string>
    <string name="title_chats">Беседы</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_users">Пользователи</string>
    <string name="title_settings">Настройки</string>
    <string name="title_profile">Профиль</string>
    <string name="title_chat">Чат</string>
    <string name="welcome_to_quick_chat">Добро пожаловать в быстрый чат</string>
    <string name="login">Логин</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="chat_icon">Значок чата</string>
    <string name="login_or_create_an_account_to_get_started">Войдите в систему или создайте учетную запись, чтобы начать работу</string>
    <string name="logout">Выход из системы</string>
    <string name="change_status">Изменить статус</string>
    <string name="change_image">Изменить изображение</string>
    <string name="add_friend">Добавить друга</string>
    <string name="remove_friend">Удалить друга</string>
    <string name="request_sent">Отправленный запрос</string>
    <string name="accept_friend_request">Принять запрос на добавление в друзья</string>
    <string name="decline_friend_request">Отклонить запрос в друзья</string>
    <string name="authorize_text">Авторизация</string>
    <string name="home_fragment_spinner_title">Группа</string>
    <string name="home_fragment_spinner_title_course">Курс</string>
    <string name="home_fragment_spinner_title_teacher">Преподаватель</string>
    <string name="history_of_lessons">Проведенные занятие</string>
    <string name="new_lesson">Новое занятие</string>
    <string name="new_lesson_date">Дата</string>
    <string name="new_lesson_group">Группа</string>
    <string name="new_lesson_theme">Тема</string>
    <string name="new_lesson_type">Вид занятий</string>
    <string name="new_lesson_count">Кол-во часов</string>
    <string name="btn_text_form">Сформировать</string>
    <string name="note_title">Примечание</string>
    <string name="title_save">Сохранить</string>
    <string name="text_empty_list_of_lessons">Нет проведенных занятий</string>
    <string name="text_empty_list_of_student">В этот курс пока никто не зачислен</string>
    <string name="secret_token">token</string>
    <string name="depart_id">department</string>
    <string name="depart_name">department_name</string>


</resources>